--- a/index.html
+++ b/index.html
@@ -1,6 +1,9 @@
 <html>
-    <title> НОВЫЙ ГОД </title>
-
+    <head>
+        <title> НОВЫЙ ГОД </title>
+        <link rel="stylesheet" href="style.css" />
+    </head>
+    
     <body>
 
         <header> 
